--- a/about.html
+++ b/about.html
@@ -330,7 +330,7 @@
 				<div class="col">
 					<div class="reservations_content d-flex flex-column align-items-center justify-content-center">
 						<div class="res_stars page_subtitle">Chef Marco</div>
-						<div class="res_title">Make a Reservation</div>
+						<div class="res_title">Hacer una reserva</div>
 						<div class="res_form_container">
 							<!-- <form action="#" id="res_form" class="res_form">
 								<div class="d-flex flex-sm-row flex-column align-items-center justify-content-start">
@@ -346,7 +346,7 @@
 								</div>
 								
 							</form> -->
-							<a href="https://wa.me/34624818116" target="_blank"><button class="res_button">Make a Reservation</button></a>
+							<a href="https://wa.me/34624818116" target="_blank"><button class="res_button">Hacer una reserva</button></a>
 						</div>
 					</div>
 				</div>
@@ -407,23 +407,25 @@
 						</ul>
 					</div>
 				</div>
-			</div><div class="orario">
-<table style="width:100%">
-  <tr>
-    <th>Lunes a Jueves</th>
-    <th>Viernes </th>
-    <th>Sabado</th>
-    <th>Domingo</th>
-  </tr>
-  <tr>
-    <td>8:00h-16:00h <br> 18:00h-23:00h</td>
-    <td>8:00h-16:00h <br> 18:00h-00:30h</td>
-    <td>10:00h-16:00h <br> 18:00h-00:30h</td>
-    <td>10:30h-16:00h <br> 18:00-22:30h</td>
-  </tr>
-  
-</table>
-</div>
+			</div>
+			<div class="orario">
+				<table style="width:100%">
+				   <tr>
+					  <th>Lunes a Jueves</th>
+					  <th class="martes">Martes</th>
+					  <th>Viernes </th>
+					  <th>Sabado</th>
+					  <th>Domingo</th>					  
+				   </tr>
+				   <tr>
+					  <td>11:00h-16:00h <br> 19:00h-23:00h</td>
+					  <td class="martes">Cerrado</td>
+					  <td>11:00h-16:00h <br> 19:00h-00:00h</td>
+					  <td>11:00h-16:00h <br> 19:00h-00:00h</td>
+					  <td>10:30h-16:00h <br> 19:00-22:30h</td>
+				   </tr>
+				</table>
+			 </div>
 		</div>
 	</footer>
 </div>
